--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Home - Yusuf Djonga ESQ">
-  <h1 class="bg-amber-400">Welcome to portfolio</h1>
+  <h1 class="bg-amber-400">Welcome to portfolio A</h1>
   <button
     type="button"
     class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
