--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,9 @@ const { title } = Astro.props;
 
 //  Import styles
 import "../styles/global.css";
+
+import Navbar from "../components/Navbar.astro";
+import Footer from "../layouts/Footer.astro";
 ---
 
 <!doctype html>
@@ -19,8 +22,14 @@ import "../styles/global.css";
     <title>{title}</title>
   </head>
   <body>
+    <Navbar />
     <slot />
+    <Footer />
   </body>
+  <!-- Preline UI -->
+  <script>
+    import "preline/dist/preline.js";
+  </script>
 </html>
 
 <style>
