Added an about section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import heroImage from "../assets/images/bdy-headshot.png";
     class="relative flex-1 pt-12 overflow-hidden bg-primary-blue bg-[url('/hero.jpg')] bg-cover bg-center"
   >
     <!-- Content Wrapper -->
-    <div class="relative mt-14 max-w-screen-xl mx-auto">
+    <div class="relative mt-14 mb-20 max-w-screen-xl mx-auto">
       <!-- Flex Box -->
       <div class="flex flex-col justify-between gap-4 md:flex-row px-4">
         <!-- First column -->
@@ -48,6 +48,30 @@ import heroImage from "../assets/images/bdy-headshot.png";
             <div class="border-overlay bottom-8 md:bottom-[46px]"></div>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Us -->
+  <section class="relative bg-transparent">
+    <!-- Content wrapper -->
+    <div class="max-w-[1180px] mx-auto bg-red-300 -mt-20">
+      <!-- Grid box -->
+      <div class="grid grid-cols-1 gap-4 md:grid-cols-3">
+        <!-- left -->
+        <div class="col-span-2 py-16 px-10">
+          <h4>The bariga brother</h4>
+          <h2>The bariga brother</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum
+            suscipit a excepturi fugiat, laudantium dolor eveniet porro eos
+            animi, natus, similique ut. Veniam commodi reiciendis quia!
+            Obcaecati quis at amet ipsum fuga sint provident cupiditate!
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+        <!-- right -->
+        <div class="">stew</div>
       </div>
     </div>
   </section>
