--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ import heroImage from "../assets/images/bdy-headshot.png";
   <!-- About Us -->
   <section class="relative bg-transparent">
     <!-- Content wrapper -->
-    <div class="max-w-[1180px] mx-auto bg-red-300 -mt-20">
+    <div class="max-w-[1180px] mx-auto bg-gray-light -mt-20">
       <!-- Grid box -->
       <div class="grid grid-cols-1 gap-4 md:grid-cols-3">
         <!-- left -->
@@ -71,7 +71,11 @@ import heroImage from "../assets/images/bdy-headshot.png";
           <a href="#">Learn More</a>
         </div>
         <!-- right -->
-        <div class="">stew</div>
+        <div
+          class="bg-[url('https://images.unsplash.com/photo-1654588834754-33346e3ee095?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjZ8fGxhd3llciUyMGFuZCUyMHRlY2hub2xvZ3l8ZW58MHx8MHx8fDA%3D')] bg-cover bg-center"
+        >
+          stew
+        </div>
       </div>
     </div>
   </section>
