--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,10 +74,14 @@ import heroImage from "../assets/images/bdy-headshot.png";
         <div
           class="bg-[url('https://images.unsplash.com/photo-1654588834754-33346e3ee095?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjZ8fGxhd3llciUyMGFuZCUyMHRlY2hub2xvZ3l8ZW58MHx8MHx8fDA%3D')] bg-cover bg-center"
         >
-          stew
         </div>
       </div>
     </div>
+  </section>
+
+  <!-- Services -->
+  <section>
+    
   </section>
 
   <!-- Hero or header section -->
