--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -359,25 +359,24 @@ import ServiceCard from "../components/ServiceCard.astro";
   <!-- End Subscribe -->
 
   <!-- Blog Section -->
-  <section>
-    <!-- Content Wrapper -->
+  <section class="px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
     <!-- Card Blog -->
-    <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
+    <div class="max-w-[85rem] mx-auto">
       <!-- Title -->
       <div class="max-w-2xl mx-auto text-center mb-10 lg:mb-14">
         <h2
-          class="text-2xl font-bold md:text-4xl md:leading-tight dark:text-white"
+          class="font-bold text-primary-blue md:leading-tight dark:text-gray-light"
         >
           Insights
         </h2>
-        <p class="mt-1 text-gray-600 dark:text-neutral-400">
-          Stay in the know with insights from industry experts.
+        <p class="mt-1 text-gray-dark dark:text-grey-light">
+          Stay in the know with tech law insights.
         </p>
       </div>
       <!-- End Title -->
 
       <!-- Grid -->
-      <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-12 md:gap-6">
         <!-- Card -->
         <a class="group flex flex-col focus:outline-hidden" href="#">
           <div class="relative pt-[50%] sm:pt-[70%] rounded-xl overflow-hidden">
@@ -387,7 +386,7 @@ import ServiceCard from "../components/ServiceCard.astro";
               alt="Blog Image"
             />
             <span
-              class="absolute top-0 end-0 rounded-se-xl rounded-es-xl text-xs font-medium bg-gray-800 text-white py-1.5 px-3 dark:bg-neutral-900"
+              class="absolute top-0 end-0 rounded-se-xl rounded-es-xl text-xs font-medium bg-primary-gold text-white py-1.5 px-3 dark:bg-neutral-900"
             >
               Sponsored
             </span>
@@ -397,7 +396,7 @@ import ServiceCard from "../components/ServiceCard.astro";
             <h3
               class="text-xl font-semibold text-gray-800 group-hover:text-gray-600 dark:text-neutral-300 dark:group-hover:text-white"
             >
-              Studio by Preline
+              Why Your App Needs a Privacy Policy
             </h3>
             <p class="mt-3 text-gray-800 dark:text-neutral-200">
               Produce professional, reliable streams easily leveraging Preline's
@@ -438,7 +437,7 @@ import ServiceCard from "../components/ServiceCard.astro";
             <h3
               class="text-xl font-semibold text-gray-800 group-hover:text-gray-600 dark:text-neutral-300 dark:group-hover:text-white"
             >
-              Onsite
+              Influencer Contracts 101 - Your Guide to Rock
             </h3>
             <p class="mt-3 text-gray-800 dark:text-neutral-200">
               Optimize your in-person experience with best-in-class capabilities
@@ -470,13 +469,16 @@ import ServiceCard from "../components/ServiceCard.astro";
           class="group relative flex flex-col w-full min-h-60 bg-[url('https://images.unsplash.com/photo-1634017839464-5c339ebe3cb4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=560&q=80')] bg-center bg-cover rounded-xl hover:shadow-lg focus:outline-hidden focus:shadow-lg transition"
           href="#"
         >
-          <div class="flex-auto p-4 md:p-6">
+          <!-- Overlay -->
+          <div class="absolute inset-0 bg-primary-blue opacity-80 z-0"></div>
+
+          <div class="flex-auto p-4 md:p-6 z-1">
             <h3 class="text-xl text-white/90 group-hover:text-white">
               <span class="font-bold">Preline</span> Press publishes books about
               economic and technological advancement.
             </h3>
           </div>
-          <div class="pt-0 p-4 md:p-6">
+          <div class="pt-0 p-4 md:p-6 z-1">
             <div
               class="inline-flex items-center gap-2 text-sm font-medium text-white group-hover:text-white/70 group-focus:text-white/70"
             >
