Modified resource section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -175,103 +175,37 @@ import ServiceCard from "../components/ServiceCard.astro";
   </section>
 
   <!-- Free Resource -->
-  <!-- Hero -->
-  <div class="overflow-hidden">
+  <section
+    class="relative md:pt-10 overflow-hidden bg-[url('https://images.unsplash.com/photo-1626072301033-d732bd943b2d?q=80&w=1738&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')] bg-center bg-cover bg-no-repeat"
+  >
+    <!-- Overlay -->
+    <div class="absolute inset-0 bg-gray-light opacity-80 z-0"></div>
+
     <div class="max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8 py-20">
       <div class="relative mx-auto max-w-4xl grid space-y-5 sm:space-y-10">
         <!-- Title -->
         <div class="text-center">
-          <p
-            class="text-xs font-semibold text-gray-500 uppercase mb-3 dark:text-neutral-200"
+          <h3
+            class="text-base font-semibold text-gray-dark uppercase mb-3 dark:text-neutral-500"
           >
-            Small business solutions
-          </p>
+            Downoad free step by step guide
+          </h3>
           <h1
-            class="text-3xl text-gray-800 font-bold sm:text-5xl lg:text-6xl lg:leading-tight dark:text-neutral-200"
+            class="text-3xl text-gray-dark font-bold sm:text-5xl lg:text-5xl lg:leading-tight dark:text-neutral-800"
           >
-            Turn online shoppers into <span class="text-blue-500"
-              >lifetime customers</span
-            >
+            Tech Law Essentials<br />
+            <span class="text-primary-gold"> Every Business Needs</span><br />to
+            protect your digital ventures.
           </h1>
         </div>
         <!-- End Title -->
-
-        <!-- Avatar Group -->
-        <div
-          class="sm:flex sm:justify-center sm:items-center text-center sm:text-start"
-        >
-          <div class="shrink-0 pb-5 sm:flex sm:pb-0 sm:pe-5">
-            <!-- Avatar Group -->
-            <div class="flex justify-center -space-x-3">
-              <img
-                class="inline-block size-8 rounded-full ring-2 ring-white dark:ring-neutral-900"
-                src="https://images.unsplash.com/photo-1568602471122-7832951cc4c5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=2&w=300&h=300&q=80"
-                alt="Avatar"
-              />
-              <img
-                class="inline-block size-8 rounded-full ring-2 ring-white dark:ring-neutral-900"
-                src="https://images.unsplash.com/photo-1531927557220-a9e23c1e4794?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=2&w=300&h=300&q=80"
-                alt="Avatar"
-              />
-              <img
-                class="inline-block size-8 rounded-full ring-2 ring-white dark:ring-neutral-900"
-                src="https://images.unsplash.com/photo-1541101767792-f9b2b1c4f127?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&&auto=format&fit=facearea&facepad=3&w=300&h=300&q=80"
-                alt="Avatar"
-              />
-              <img
-                class="inline-block size-8 rounded-full ring-2 ring-white dark:ring-neutral-900"
-                src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=2&w=300&h=300&q=80"
-                alt="Avatar"
-              />
-              <span
-                class="inline-flex items-center justify-center size-8 rounded-full ring-2 ring-white bg-gray-800 dark:bg-neutral-900 dark:ring-neutral-900"
-              >
-                <span class="text-xs font-medium text-white uppercase">7k+</span
-                >
-              </span>
-            </div>
-            <!-- End Avatar Group -->
-          </div>
-
-          <div
-            class="border-t sm:border-t-0 sm:border-s border-gray-200 w-32 h-px sm:w-auto sm:h-full mx-auto sm:mx-0 dark:border-neutral-700"
-          >
-          </div>
-
-          <div class="pt-5 sm:pt-0 sm:ps-5">
-            <div
-              class="text-lg font-semibold text-gray-800 dark:text-neutral-200"
-            >
-              Trust pilot
-            </div>
-            <div class="text-sm text-gray-500 dark:text-neutral-500">
-              Rated best over 37k reviews
-            </div>
-          </div>
-        </div>
-        <!-- End Avatar Group -->
 
         <!-- Form -->
         <form>
           <div
             class="mx-auto max-w-2xl sm:flex sm:space-x-3 p-3 bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-100 dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-gray-900/20"
           >
-            <div class="w-full pb-2 sm:pb-0">
-              <label
-                for="hs-hero-name-1"
-                class="block text-sm font-medium dark:text-white"
-                ><span class="sr-only">Your name</span></label
-              >
-              <input
-                type="text"
-                id="hs-hero-name-1"
-                class="py-2.5 sm:py-3 px-4 block w-full border-transparent rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 dark:bg-neutral-900 dark:border-transparent dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                placeholder="Your name"
-              />
-            </div>
-            <div
-              class="pt-2 sm:pt-0 sm:ps-3 border-t border-gray-200 sm:border-t-0 sm:border-s w-full dark:border-neutral-700"
-            >
+            <div class="pt-2 sm:pt-0 sm:ps-3 w-full dark:border-neutral-700">
               <label
                 for="hs-hero-email-1"
                 class="block text-sm font-medium dark:text-white"
@@ -281,7 +215,7 @@ import ServiceCard from "../components/ServiceCard.astro";
                 type="email"
                 id="hs-hero-email-1"
                 class="py-2.5 sm:py-3 px-4 block w-full border-transparent rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 dark:bg-neutral-900 dark:border-transparent dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                placeholder="Your name"
+                placeholder="Your email address"
               />
             </div>
             <div class="whitespace-nowrap pt-2 sm:pt-0 grid sm:block">
@@ -355,7 +289,7 @@ import ServiceCard from "../components/ServiceCard.astro";
         <!-- End SVG Element -->
       </div>
     </div>
-  </div>
+  </section>
   <!-- End Subscribe -->
 
   <!-- Blog Section -->
