--- a/src/components/ServiceCard.astro
+++ b/src/components/ServiceCard.astro
@@ -1,5 +1,5 @@
 ---
-
+const { item } = Astro.props;
 ---
 
 <a
@@ -17,8 +17,8 @@
   </div>
   <div class="flex flex-wrap">
     <div class="p-4 flex flex-col h-full sm:p-7">
-      <h3 class="text-lg font-bold text-gray-800 dark:text-white">
-        Card title
+      <h3 class="font-bold text-gray-800 dark:text-white">
+        {item.title}
       </h3>
       <p class="mt-1 text-gray-500 dark:text-neutral-400">
         Some quick example text to build on the card title and make up the bulk
