--- a/src/components/ServiceCard.astro
+++ b/src/components/ServiceCard.astro
@@ -2,16 +2,15 @@
 const { item } = Astro.props;
 ---
 
-<a
-  class="bg-white border border-gray-200 rounded-xl shadow-2xs sm:flex dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70"
-  href="#"
+<div
+  class="group bg-white border border-gray-200 rounded-xl shadow-2xs sm:flex dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70"
 >
   <div
     class="shrink-0 relative w-full rounded-t-xl overflow-hidden pt-[40%] sm:rounded-s-xl sm:max-w-60 md:rounded-se-none md:max-w-xs"
   >
     <img
       class="size-full absolute top-0 start-0 object-cover"
-      src="https://images.unsplash.com/photo-1680868543815-b8666dba60f7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=560&q=80"
+      src={item.image}
       alt="Card Image"
     />
   </div>
@@ -24,11 +23,25 @@ const { item } = Astro.props;
         Some quick example text to build on the card title and make up the bulk
         of the card's content.
       </p>
-      <div class="mt-5 sm:mt-auto">
-        <p class="text-xs text-gray-500 dark:text-neutral-500">
-          Last updated 5 mins ago
-        </p>
-      </div>
+
+      <a
+        class="mt-2 inline-flex items-center gap-x-1.5 text-base text-blue-600 decoration-2 group-hover:underline group-focus:underline font-medium"
+        href="#"
+      >
+        Learn more
+        <svg
+          class="shrink-0 size-4"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"><path d="m9 18 6-6-6-6"></path></svg
+        >
+      </a>
     </div>
   </div>
-</a>
+</div>
