--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,7 @@ import ServiceBlurb from "../components/ServiceBlurb.astro";
 import ServiceCard from "../components/ServiceCard.astro";
 
 import { Shopcards } from "../utils/db";
-
-console.log("actios", Shopcards);
+import { Services } from "../utils/db";
 ---
 
 <Layout title="Home - Yusuf Djonga ESQ">
@@ -101,59 +100,39 @@ console.log("actios", Shopcards);
     <div
       class="mt-10 sm:mt-20 grid grid-cols-2 md:grid-cols-3 items-center gap-2 sm:gap-6 lg:gap-18"
     >
-      <ServiceBlurb
-        title="Business Formation"
-        excerpt="Strategic setup for your business to launch strong and grow smart."
-      />
-      <ServiceBlurb
-        title="Data Privacy & Internet Law"
-        excerpt="Comprehensive legal support to safeguard your online presence, from data privacy compliance to internet regulations."
-      />
-      <ServiceBlurb
-        title="Tech Contracts"
-        excerpt="Custom, tech-focused contracts to lock in your business deals with clarity and confidence."
-      />
-      <ServiceBlurb
-        title="Business Formation"
-        excerpt="Strategic setup for your business to launch strong and grow smart."
-      />
-      <ServiceBlurb
-        title="Data Privacy & Internet Law"
-        excerpt="Comprehensive legal support to safeguard your online presence, from data privacy compliance to internet regulations."
-      />
-      <ServiceBlurb
-        title="Tech Contracts"
-        excerpt="Custom, tech-focused contracts to lock in your business deals with clarity and confidence."
-      />
+      {Services.map((serv) => <ServiceBlurb item={serv} />)};
     </div>
     <!-- End Grid -->
   </section>
 
   <!-- Schedule Call -->
-  <section class="w-full px-4 sm:px-6 lg:px-8">
-    <div
-      class="bg-blue-600 bg-[url('https://preline.co/assets/svg/examples/abstract-1.svg')] bg-no-repeat bg-cover bg-center p-4 rounded-lg text-center"
-    >
+  <section
+    class="relative px-4 sm:px-6 lg:px-8 py-10 w-full bg-[url('https://img.freepik.com/premium-photo/low-key-filter-law-bookshelf-with-wooden-judge-s-gavel-golden-scale-3d-rendering_34259-444.jpg?w=1060')] bg-no-repeat bg-cover bg-center text-center"
+  >
+    <!-- Overlay -->
+    <div class="absolute inset-0 bg-primary-blue opacity-80 z-0"></div>
+
+    <div class="max-w-[85rem] mx-auto">
       <!-- Grid -->
       <div
-        class="grid justify-center md:grid-cols-2 md:justify-between md:items-center gap-2"
+        class="grid justify-center md:grid-cols-2 md:justify-between md:items-center gap-2 z-1"
       >
-        <div class="text-center md:text-start">
-          <p class="text-xs text-white/80 uppercase">Preview of Preline</p>
-          <p class="mt-1 text-white font-medium">
-            Sign up to get unlimited updates. No credit card required.
-          </p>
+        <div class="text-center md:text-start z-1">
+          <h4 class="text-white/80 uppercase">Schedule a Call</h4>
+          <h2 class="mt-1 text-white font-medium">
+            Book a Quick Call to Disuss More Today!
+          </h2>
         </div>
         <!-- End Col -->
 
         <div
-          class="mt-3 text-center md:text-start md:flex md:justify-end md:items-center"
+          class="mt-3 text-center md:text-start md:flex md:justify-end md:items-center z-1"
         >
           <a
-            class="py-2 px-3 md:py-3 md:px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-full border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800 dark:focus:bg-neutral-800"
+            class="py-2 px-3 md:py-3 md:px-6 inline-flex items-center gap-x-2 text-base font-medium rounded-full border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800 dark:focus:bg-neutral-800"
             href="#"
           >
-            Sign up free
+            Book Call
           </a>
         </div>
         <!-- End Col -->
