More milestone changes

--- a/src/components/ServiceCard.astro
+++ b/src/components/ServiceCard.astro
@@ -3,7 +3,7 @@ const { item } = Astro.props;
 ---
 
 <div
-  class="group bg-white border border-gray-200 rounded-xl shadow-2xs sm:flex dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70"
+  class="group bg-white border border-[var(--color-primary-gold)] rounded-xl shadow-2xs sm:flex dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70"
 >
   <div
     class="shrink-0 relative w-full rounded-t-xl overflow-hidden pt-[40%] sm:rounded-s-xl sm:max-w-60 md:rounded-se-none md:max-w-xs"
