--- a/src/components/ServiceBlurb.astro
+++ b/src/components/ServiceBlurb.astro
@@ -9,18 +9,18 @@ const { item } = Astro.props;
   <div
     class="relative flex justify-center items-center size-12 bg-primary-gold group-hover:bg-primary-blue rounded-xl before:absolute before:-inset-px before:-z-1 before:bg-linear-to-br before:from-[var(--color-primary-blue)] before:via-transparent before:to-[var(--color-primary-gold)] before:rounded-xl dark:bg-neutral-900"
   >
-    <img src={item.image} alt={item.title} class="h-6 w-6" />
+    <img src={item.image} alt={item.title} class="h-8 w-8" />
   </div>
   <div class="mt-5">
-    <h3 class="text-lg font-semibold text-gray-800 dark:text-white">
+    <h3 class="text-lg font-semibold text-gray-dark dark:text-white">
       {item.title}
     </h3>
-    <p class="mt-1 text-gray-600 line-clamp-2 dark:text-neutral-400">
+    <p class="mt-1 text-gray-medium line-clamp-2 dark:text-neutral-400">
       {item.description}
     </p>
 
     <a
-      class="mt-2 inline-flex items-center gap-x-1.5 text-sm text-blue-600 decoration-2 group-hover:underline group-focus:underline font-medium"
+      class="mt-2 inline-flex items-center gap-x-1.5 text-sm text-primary-blue decoration-2 group-hover:underline group-focus:underline font-medium"
       href="#"
     >
       Learn more
